<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="mundo.hola.com.example.alfre.proyecto_seguridad.Create"
    tools:showIn="@layout/activity_create">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/actionBar"
        android:gravity="center"
        android:elevation="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo_aplicacion"
            android:textSize="45sp"
            android:textColor="@color/blanco"
            />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/fondo_principal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre_nuevo_ritmo"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:textSize="20dp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/edtNuevoRitmo"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:hint="Nuevo Ritmo"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:background="@color/blanco"/>

        <ImageView
            android:id="@+id/imgCircle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="55dp"
            android:layout_marginTop="20dp"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="50dp"
            android:layout_marginTop="20dp">
            <Button
                android:id="@+id/btnPlay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_play"
                android:background="@color/btn_play"/>
            <Button
                android:id="@+id/btnStop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_stop"
                android:background="@color/btn_stop"/>
            <Button
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_save"
                android:background="@color/btn_save"/>
        </LinearLayout>

        <Button
            android:id="@+id/btnTimes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="leer tiempos"/>
    </LinearLayout>


</LinearLayout>
